-- TravleMate ERD
-- ERDCloud import용 MySQL DDL
-- erdcloud.com → 새 ERD 생성 → Import SQL → 이 파일 내용 붙여넣기

-- =============================================
-- 테이블 생성
-- =============================================

CREATE TABLE `ADMIN_ACCOUNT` (
  `ADMIN_NO`  BIGINT       NOT NULL COMMENT '관리자 고유번호',
  `ID`        VARCHAR(50)  NOT NULL COMMENT '관리자 아이디',
  `PW`        VARCHAR(500) NOT NULL COMMENT '비밀번호 (AES256 암호화)'
);

CREATE TABLE `MEMBER_MASTER` (
  `MEMBER_NO`  BIGINT    NOT NULL                           COMMENT '회원 고유번호',
  `CREATE_DT`  DATETIME  NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '가입일시'
);

CREATE TABLE `MEMBER_ACTIVE` (
  `MEMBER_NO`  BIGINT       NOT NULL COMMENT '회원 고유번호 (MEMBER_MASTER 공유)',
  `NAME`       VARCHAR(100) NOT NULL COMMENT '이름',
  `NICKNAME`   VARCHAR(100) NOT NULL COMMENT '닉네임',
  `ID`         VARCHAR(50)  NOT NULL COMMENT '로그인 아이디',
  `PW`         VARCHAR(500) NOT NULL COMMENT '비밀번호 (AES256 암호화)',
  `EMAIL`      VARCHAR(200)          COMMENT '이메일',
  `PHONE_NO`   VARCHAR(20)           COMMENT '휴대폰번호'
);

CREATE TABLE `MEMBER_LEAVE` (
  `MEMBER_NO`  BIGINT       NOT NULL                           COMMENT '탈퇴 회원 고유번호',
  `NAME`       VARCHAR(100)                                    COMMENT '이름',
  `NICKNAME`   VARCHAR(100)                                    COMMENT '닉네임',
  `ID`         VARCHAR(50)                                     COMMENT '로그인 아이디',
  `PW`         VARCHAR(500)                                    COMMENT '비밀번호 (암호화)',
  `EMAIL`      VARCHAR(200)                                    COMMENT '이메일',
  `PHONE_NO`   VARCHAR(20)                                     COMMENT '휴대폰번호',
  `LEAVE_DT`   DATETIME              DEFAULT CURRENT_TIMESTAMP COMMENT '탈퇴일시'
);

CREATE TABLE `MEMBER_SANCTION` (
  `SANCTION_NO`    BIGINT       NOT NULL                           COMMENT '제재 고유번호',
  `MEMBER_NO`      BIGINT       NOT NULL                           COMMENT '제재 대상 회원번호',
  `LEVEL_DAYS`     INT          NOT NULL                           COMMENT '제재 일수 (1/3/7)',
  `REASON`         VARCHAR(100)                                    COMMENT '제재 사유',
  `SANCTION_CMT`   VARCHAR(500)                                    COMMENT '제재 상세 메모',
  `ADMIN_NO`       BIGINT                                          COMMENT '처리 관리자번호',
  `SANCTION_DT`    DATETIME     NOT NULL DEFAULT CURRENT_TIMESTAMP COMMENT '제재 시작일시',
  `SANCTION_UNTIL` DATETIME                                        COMMENT '제재 해제일시'
);

CREATE TABLE `CONTENTCATEGORY` (
  `CONTENTTYPEID`  VARCHAR(20)  NOT NULL COMMENT '카테고리 코드 (API 기준)',
  `CONTENTDIV`     VARCHAR(100)          COMMENT '카테고리명 (관광지/숙박/음식점 등)'
);

CREATE TABLE `CONTENT` (
  `CONTENTID`     BIGINT        NOT NULL COMMENT '컨텐츠 고유번호',
  `TITLE`         VARCHAR(500)           COMMENT '컨텐츠명',
  `ADDR1`         VARCHAR(1000)          COMMENT '주소',
  `ADDR2`         VARCHAR(1000)          COMMENT '상세주소',
  `CONTENTTYPEID` VARCHAR(20)            COMMENT '카테고리 코드',
  `FIRSTIMAGE`    VARCHAR(1000)          COMMENT '대표이미지1 URL',
  `FIRSTIMAGE2`   VARCHAR(1000)          COMMENT '대표이미지2 URL',
  `CREATEDTIME`   VARCHAR(14)            COMMENT 'API 생성일자 (yyyyMMddHHmmss)',
  `MODIFIEDTIME`  VARCHAR(14)            COMMENT 'API 수정일자 (yyyyMMddHHmmss)',
  `MAPX`          DOUBLE                 COMMENT '경도',
  `MAPY`          DOUBLE                 COMMENT '위도',
  `APIID`         VARCHAR(1000)          COMMENT 'API 원본 CONTENTID'
);

CREATE TABLE `CONTENTEVENT` (
  `CONTENTID`      BIGINT      NOT NULL COMMENT '컨텐츠 고유번호',
  `EVENTSTARTDATE` VARCHAR(20)          COMMENT '행사 시작일',
  `EVENTENDDATE`   VARCHAR(20)          COMMENT '행사 종료일'
);

CREATE TABLE `IMAGE` (
  `CONTENTIMAGEID` BIGINT        NOT NULL COMMENT '이미지 고유번호',
  `CONTENTID`      BIGINT                 COMMENT '컨텐츠 고유번호',
  `IMAGE`          VARCHAR(1000)          COMMENT '이미지 URL'
);

CREATE TABLE `CONTENTIMAGE` (
  `CONTENTIMAGEID` BIGINT        NOT NULL COMMENT '이미지 고유번호',
  `APIID`          VARCHAR(1000)          COMMENT 'API 원본 CONTENTID',
  `ORIGINIMGURL`   VARCHAR(1000)          COMMENT '원본 이미지 URL',
  `IMGNAME`        VARCHAR(500)           COMMENT '이미지명'
);

CREATE TABLE `CONTENT_REVIEW` (
  `CONTENT_REVIEW_NO` BIGINT        NOT NULL                           COMMENT '리뷰 고유번호',
  `MEMBER_NO`         BIGINT        NOT NULL                           COMMENT '작성 회원번호',
  `CONTENTID`         BIGINT        NOT NULL                           COMMENT '컨텐츠 고유번호',
  `REVIEW_COMMENT`    VARCHAR(2000)                                    COMMENT '리뷰 내용',
  `RATING`            INT                                              COMMENT '별점 (1~5)',
  `CREATE_DT`         DATETIME               DEFAULT CURRENT_TIMESTAMP COMMENT '작성일시'
);

CREATE TABLE `REVIEW_REPORT_TYPE` (
  `REPORT_TYPE_CD` BIGINT       NOT NULL COMMENT '신고 타입 코드',
  `REPORT_TYPE_NM` VARCHAR(100) NOT NULL COMMENT '신고 타입명 (욕설/스팸/허위정보/기타)'
);

CREATE TABLE `REVIEW_REPORT` (
  `REVIEW_REPORT_NO`   BIGINT       NOT NULL                           COMMENT '신고 고유번호',
  `REPORTER_MEMBER_NO` BIGINT       NOT NULL                           COMMENT '신고자 회원번호',
  `CONTENT_REVIEW_NO`  BIGINT       NOT NULL                           COMMENT '신고 대상 리뷰번호',
  `REPORT_TYPE_CD`     BIGINT                                          COMMENT '신고 타입 코드',
  `REPORT_COMMENT`     VARCHAR(500)                                    COMMENT '신고 내용',
  `REPORT_DT`          DATETIME              DEFAULT CURRENT_TIMESTAMP COMMENT '신고 일시',
  `PROCESS_YN`         VARCHAR(1)            DEFAULT 'N'               COMMENT '처리 여부 (Y/N)'
);

CREATE TABLE `MEMBER_BOOKMARK` (
  `BOOKMARK_NO` BIGINT    NOT NULL                           COMMENT '즐겨찾기 고유번호',
  `MEMBER_NO`   BIGINT    NOT NULL                           COMMENT '회원 고유번호',
  `CONTENTID`   BIGINT    NOT NULL                           COMMENT '컨텐츠 고유번호',
  `CREATE_DT`   DATETIME           DEFAULT CURRENT_TIMESTAMP COMMENT '즐겨찾기 등록일시'
);

CREATE TABLE `NOTICE` (
  `NOTICE_NO`      BIGINT        NOT NULL                           COMMENT '공지사항 고유번호',
  `ADMIN_NO`       BIGINT                                           COMMENT '작성 관리자번호',
  `NOTICE_TITLE`   VARCHAR(200)  NOT NULL                           COMMENT '공지 제목',
  `NOTICE_CONTENT` VARCHAR(4000)                                    COMMENT '공지 내용',
  `VIEW_CNT`       INT                    DEFAULT 0                 COMMENT '조회수',
  `CREATE_DT`      DATETIME               DEFAULT CURRENT_TIMESTAMP COMMENT '작성일시'
);

CREATE TABLE `FAQ_TYPE` (
  `FAQ_TYPE_CD` VARCHAR(20)  NOT NULL COMMENT '카테고리 코드',
  `FAQ_TYPE_NM` VARCHAR(100) NOT NULL COMMENT '카테고리명'
);

CREATE TABLE `FAQ` (
  `FAQ_NO`       BIGINT        NOT NULL                           COMMENT 'FAQ 고유번호',
  `FAQ_TYPE_CD`  VARCHAR(20)   NOT NULL                           COMMENT '카테고리 코드',
  `ADMIN_NO`     BIGINT                                           COMMENT '작성 관리자번호',
  `FAQ_QUESTION` VARCHAR(500)  NOT NULL                           COMMENT '질문 내용',
  `FAQ_ANSWER`   VARCHAR(4000)                                    COMMENT '답변 내용',
  `CREATE_DT`    DATETIME               DEFAULT CURRENT_TIMESTAMP COMMENT '작성일시'
);

CREATE TABLE `QNA_TYPE` (
  `QNA_TYPE_CD` VARCHAR(20)  NOT NULL COMMENT '카테고리 코드',
  `QNA_TYPE_NM` VARCHAR(100) NOT NULL COMMENT '카테고리명'
);

CREATE TABLE `QNA_QUESTION` (
  `QNA_REQ_NO`  BIGINT        NOT NULL                            COMMENT '문의 고유번호',
  `MEMBER_NO`   BIGINT        NOT NULL                            COMMENT '문의 회원번호',
  `QNA_TYPE_CD` VARCHAR(20)   NOT NULL                            COMMENT '카테고리 코드',
  `QNA_TITLE`   VARCHAR(200)  NOT NULL                            COMMENT '문의 제목',
  `QNA_CONTENT` VARCHAR(4000)                                     COMMENT '문의 내용',
  `STATUS_CD`   VARCHAR(10)   NOT NULL DEFAULT 'ST001'            COMMENT '처리상태 (ST001:접수대기 ST002:답변완료)',
  `CREATE_DT`   DATETIME               DEFAULT CURRENT_TIMESTAMP  COMMENT '문의 등록일시'
);

CREATE TABLE `QNA_ANSWER` (
  `QNA_ANS_NO`  BIGINT        NOT NULL COMMENT '답변 고유번호',
  `QNA_REQ_NO`  BIGINT        NOT NULL COMMENT '문의 고유번호 (1:1 관계)',
  `ADMIN_NO`    BIGINT                 COMMENT '답변 관리자번호',
  `ANS_CONTENT` VARCHAR(4000)          COMMENT '답변 내용'
);

CREATE TABLE `TRAVEL_THEME` (
  `TRAVEL_THEME_CD` VARCHAR(20)  NOT NULL COMMENT '테마 코드',
  `TRAVEL_THEME_NM` VARCHAR(100) NOT NULL COMMENT '테마명 (힐링/액티비티 등)'
);

CREATE TABLE `TRAVEL_PLAN` (
  `TRAVEL_PLAN_NO`      BIGINT        NOT NULL                           COMMENT '여행계획 고유번호',
  `HOST_MEMBER_NO`      BIGINT        NOT NULL                           COMMENT '호스트 회원번호',
  `TRAVEL_NAME`         VARCHAR(200)  NOT NULL                           COMMENT '여행계획 이름',
  `TRAVEL_THEME_CD`     VARCHAR(20)                                      COMMENT '여행 테마 코드',
  `TRAVEL_START_DT`     DATETIME                                         COMMENT '여행 시작일',
  `TRAVEL_END_DT`       DATETIME                                         COMMENT '여행 종료일',
  `OUTLINE`             VARCHAR(1000)                                    COMMENT '여행 개요',
  `ROOT_TRAVEL_PLAN_NO` BIGINT                                           COMMENT '루트 계획 번호 (버전 분기용)',
  `REVISION_DT`         DATETIME               DEFAULT CURRENT_TIMESTAMP COMMENT '최근 수정일시'
);

CREATE TABLE `ACTION_TYPE` (
  `ACTION_TYPE_CD` VARCHAR(20)  NOT NULL COMMENT '액션 코드 (Act001/Act002/Act003)',
  `ACTION_TYPE_NM` VARCHAR(100) NOT NULL COMMENT '액션명 (생성/수정/삭제)'
);

CREATE TABLE `PLAN_GUEST` (
  `PLAN_GUEST_NO`  BIGINT    NOT NULL                           COMMENT '게스트 고유번호',
  `TRAVEL_PLAN_NO` BIGINT    NOT NULL                           COMMENT '여행계획 고유번호',
  `MEMBER_NO`      BIGINT    NOT NULL                           COMMENT '참여 회원번호',
  `CREATE_DT`      DATETIME           DEFAULT CURRENT_TIMESTAMP COMMENT '참여일시'
);

CREATE TABLE `TRAVEL_ITINERARY` (
  `TRAVEL_ITINERARY_NO` BIGINT        NOT NULL COMMENT '일정 고유번호',
  `TRAVEL_PLAN_NO`      BIGINT        NOT NULL COMMENT '여행계획 고유번호',
  `ITINERARY_DT`        DATETIME      NOT NULL COMMENT '일정 날짜',
  `ITINERARY_TIME`      VARCHAR(5)             COMMENT '일정 시간 (HH:MI 형식)',
  `ITINERARY_NM`        VARCHAR(200)  NOT NULL COMMENT '일정 제목',
  `ITINERARY_MEMO`      VARCHAR(1000)          COMMENT '일정 메모',
  `CONTENT_NO`          BIGINT                 COMMENT '연결 관광지 번호 (NULL 허용)'
);

CREATE TABLE `ITINERARY_EXPENSE_TYPE` (
  `EXPENSE_TYPE_CD` VARCHAR(20)  NOT NULL COMMENT '비용 카테고리 코드',
  `EXPENSE_TYPE_NM` VARCHAR(100) NOT NULL COMMENT '비용 카테고리명 (숙박/교통/식비/관광체험/쇼핑/기타)'
);

CREATE TABLE `ITINERARY_EXPENSE` (
  `ITINERARY_EXPENSE_NO`   BIGINT      NOT NULL COMMENT '비용 고유번호',
  `TRAVEL_ITINERARY_NO`    BIGINT      NOT NULL COMMENT '일정 고유번호',
  `EXPENSE_AMT`            INT         NOT NULL COMMENT '비용 금액 (원)',
  `ITINERARY_EXPENSE_TYPE` VARCHAR(20)          COMMENT '비용 카테고리 코드'
);

CREATE TABLE `TRAVEL_ITINERARY_HIST` (
  `ITINERARY_HIST_NO`   BIGINT        NOT NULL                           COMMENT '이력 고유번호',
  `TRAVEL_ITINERARY_NO` BIGINT        NOT NULL                           COMMENT '일정 고유번호',
  `ACTION_TYPE_CD`      VARCHAR(20)                                      COMMENT '액션 코드 (생성/수정/삭제)',
  `PLAN_GUEST_NO`       BIGINT                                           COMMENT '편집한 게스트번호 (NULL 허용)',
  `ITINERARY_NM`        VARCHAR(200)                                     COMMENT '편집 당시 일정 제목 스냅샷',
  `EDIT_DT`             DATETIME               DEFAULT CURRENT_TIMESTAMP COMMENT '편집일시'
);

CREATE TABLE `TRAVEL_INVITATION` (
  `TRAVEL_INVITATION_NO` BIGINT       NOT NULL                           COMMENT '초대코드 고유번호',
  `INVITE_CODE`          VARCHAR(100) NOT NULL                           COMMENT 'UUID 기반 초대 코드 (16자리)',
  `TRAVEL_PLAN_NO`       BIGINT       NOT NULL                           COMMENT '여행계획 고유번호',
  `CREATE_DT`            DATETIME              DEFAULT CURRENT_TIMESTAMP COMMENT '초대코드 생성일시'
);

CREATE TABLE `PLAN_GUEST_LEAVE` (
  `PLAN_GUEST_NO` BIGINT      NOT NULL                           COMMENT '게스트 고유번호',
  `LEAVE_DATE`    DATETIME             DEFAULT CURRENT_TIMESTAMP COMMENT '탈퇴/내보내기 일시',
  `LEAVE_TYPE`    VARCHAR(20)                                    COMMENT '탈퇴 유형 (leave: 자발적 / kick: 강제)'
);

CREATE TABLE `PLAN_CHECKLIST` (
  `CHECKLIST_NO`   BIGINT       NOT NULL                            COMMENT '체크리스트 고유번호',
  `TRAVEL_PLAN_NO` BIGINT       NOT NULL                            COMMENT '여행계획 고유번호',
  `ITEM_CONTENT`   VARCHAR(200) NOT NULL                            COMMENT '항목 내용',
  `IS_CHECKED`     INT          NOT NULL DEFAULT 0                  COMMENT '체크 여부 (0: 미체크 / 1: 체크)',
  `CREATE_DT`      DATETIME     NOT NULL DEFAULT CURRENT_TIMESTAMP  COMMENT '등록일시'
);

-- =============================================
-- PRIMARY KEY
-- =============================================

ALTER TABLE `ADMIN_ACCOUNT`          ADD CONSTRAINT `PK_ADMIN_ACCOUNT`          PRIMARY KEY (`ADMIN_NO`);
ALTER TABLE `MEMBER_MASTER`          ADD CONSTRAINT `PK_MEMBER_MASTER`          PRIMARY KEY (`MEMBER_NO`);
ALTER TABLE `MEMBER_ACTIVE`          ADD CONSTRAINT `PK_MEMBER_ACTIVE`          PRIMARY KEY (`MEMBER_NO`);
ALTER TABLE `MEMBER_LEAVE`           ADD CONSTRAINT `PK_MEMBER_LEAVE`           PRIMARY KEY (`MEMBER_NO`);
ALTER TABLE `MEMBER_SANCTION`        ADD CONSTRAINT `PK_MEMBER_SANCTION`        PRIMARY KEY (`SANCTION_NO`);
ALTER TABLE `CONTENTCATEGORY`        ADD CONSTRAINT `PK_CONTENTCATEGORY`        PRIMARY KEY (`CONTENTTYPEID`);
ALTER TABLE `CONTENT`                ADD CONSTRAINT `PK_CONTENT`                PRIMARY KEY (`CONTENTID`);
ALTER TABLE `CONTENTEVENT`           ADD CONSTRAINT `PK_CONTENTEVENT`           PRIMARY KEY (`CONTENTID`);
ALTER TABLE `IMAGE`                  ADD CONSTRAINT `PK_IMAGE`                  PRIMARY KEY (`CONTENTIMAGEID`);
ALTER TABLE `CONTENTIMAGE`           ADD CONSTRAINT `PK_CONTENTIMAGE`           PRIMARY KEY (`CONTENTIMAGEID`);
ALTER TABLE `CONTENT_REVIEW`         ADD CONSTRAINT `PK_CONTENT_REVIEW`         PRIMARY KEY (`CONTENT_REVIEW_NO`);
ALTER TABLE `REVIEW_REPORT_TYPE`     ADD CONSTRAINT `PK_REVIEW_REPORT_TYPE`     PRIMARY KEY (`REPORT_TYPE_CD`);
ALTER TABLE `REVIEW_REPORT`          ADD CONSTRAINT `PK_REVIEW_REPORT`          PRIMARY KEY (`REVIEW_REPORT_NO`);
ALTER TABLE `MEMBER_BOOKMARK`        ADD CONSTRAINT `PK_MEMBER_BOOKMARK`        PRIMARY KEY (`BOOKMARK_NO`);
ALTER TABLE `NOTICE`                 ADD CONSTRAINT `PK_NOTICE`                 PRIMARY KEY (`NOTICE_NO`);
ALTER TABLE `FAQ_TYPE`               ADD CONSTRAINT `PK_FAQ_TYPE`               PRIMARY KEY (`FAQ_TYPE_CD`);
ALTER TABLE `FAQ`                    ADD CONSTRAINT `PK_FAQ`                    PRIMARY KEY (`FAQ_NO`);
ALTER TABLE `QNA_TYPE`               ADD CONSTRAINT `PK_QNA_TYPE`               PRIMARY KEY (`QNA_TYPE_CD`);
ALTER TABLE `QNA_QUESTION`           ADD CONSTRAINT `PK_QNA_QUESTION`           PRIMARY KEY (`QNA_REQ_NO`);
ALTER TABLE `QNA_ANSWER`             ADD CONSTRAINT `PK_QNA_ANSWER`             PRIMARY KEY (`QNA_ANS_NO`);
ALTER TABLE `TRAVEL_THEME`           ADD CONSTRAINT `PK_TRAVEL_THEME`           PRIMARY KEY (`TRAVEL_THEME_CD`);
ALTER TABLE `TRAVEL_PLAN`            ADD CONSTRAINT `PK_TRAVEL_PLAN`            PRIMARY KEY (`TRAVEL_PLAN_NO`);
ALTER TABLE `ACTION_TYPE`            ADD CONSTRAINT `PK_ACTION_TYPE`            PRIMARY KEY (`ACTION_TYPE_CD`);
ALTER TABLE `PLAN_GUEST`             ADD CONSTRAINT `PK_PLAN_GUEST`             PRIMARY KEY (`PLAN_GUEST_NO`);
ALTER TABLE `TRAVEL_ITINERARY`       ADD CONSTRAINT `PK_TRAVEL_ITINERARY`       PRIMARY KEY (`TRAVEL_ITINERARY_NO`);
ALTER TABLE `ITINERARY_EXPENSE_TYPE` ADD CONSTRAINT `PK_ITINERARY_EXPENSE_TYPE` PRIMARY KEY (`EXPENSE_TYPE_CD`);
ALTER TABLE `ITINERARY_EXPENSE`      ADD CONSTRAINT `PK_ITINERARY_EXPENSE`      PRIMARY KEY (`ITINERARY_EXPENSE_NO`);
ALTER TABLE `TRAVEL_ITINERARY_HIST`  ADD CONSTRAINT `PK_TRAVEL_ITINERARY_HIST`  PRIMARY KEY (`ITINERARY_HIST_NO`);
ALTER TABLE `TRAVEL_INVITATION`      ADD CONSTRAINT `PK_TRAVEL_INVITATION`      PRIMARY KEY (`TRAVEL_INVITATION_NO`);
ALTER TABLE `PLAN_GUEST_LEAVE`       ADD CONSTRAINT `PK_PLAN_GUEST_LEAVE`       PRIMARY KEY (`PLAN_GUEST_NO`);
ALTER TABLE `PLAN_CHECKLIST`         ADD CONSTRAINT `PK_PLAN_CHECKLIST`         PRIMARY KEY (`CHECKLIST_NO`);

-- =============================================
-- UNIQUE
-- =============================================

ALTER TABLE `ADMIN_ACCOUNT`   ADD CONSTRAINT `UK_ADMIN_ID`        UNIQUE (`ID`);
ALTER TABLE `MEMBER_ACTIVE`   ADD CONSTRAINT `UK_MEMBER_ID`        UNIQUE (`ID`);
ALTER TABLE `MEMBER_ACTIVE`   ADD CONSTRAINT `UK_MEMBER_NICKNAME`  UNIQUE (`NICKNAME`);
ALTER TABLE `CONTENT`         ADD CONSTRAINT `UK_CONTENT_APIID`    UNIQUE (`APIID`);
ALTER TABLE `MEMBER_BOOKMARK` ADD CONSTRAINT `UK_BOOKMARK`         UNIQUE (`MEMBER_NO`, `CONTENTID`);
ALTER TABLE `QNA_ANSWER`      ADD CONSTRAINT `UK_QNA_ANSWER`       UNIQUE (`QNA_REQ_NO`);
ALTER TABLE `TRAVEL_INVITATION` ADD CONSTRAINT `UK_INVITE_CODE`    UNIQUE (`INVITE_CODE`);

-- =============================================
-- FOREIGN KEY
-- =============================================

-- 회원
ALTER TABLE `MEMBER_ACTIVE` ADD CONSTRAINT `FK_MEMBER_ACTIVE_MASTER`
  FOREIGN KEY (`MEMBER_NO`) REFERENCES `MEMBER_MASTER` (`MEMBER_NO`);

ALTER TABLE `MEMBER_SANCTION` ADD CONSTRAINT `FK_SANCTION_MEMBER`
  FOREIGN KEY (`MEMBER_NO`) REFERENCES `MEMBER_MASTER` (`MEMBER_NO`);

-- 컨텐츠
ALTER TABLE `CONTENT` ADD CONSTRAINT `FK_CONTENT_CATEGORY`
  FOREIGN KEY (`CONTENTTYPEID`) REFERENCES `CONTENTCATEGORY` (`CONTENTTYPEID`);

ALTER TABLE `CONTENTEVENT` ADD CONSTRAINT `FK_CONTENTEVENT_CONTENT`
  FOREIGN KEY (`CONTENTID`) REFERENCES `CONTENT` (`CONTENTID`);

ALTER TABLE `IMAGE` ADD CONSTRAINT `FK_IMAGE_CONTENT`
  FOREIGN KEY (`CONTENTID`) REFERENCES `CONTENT` (`CONTENTID`);

ALTER TABLE `CONTENT_REVIEW` ADD CONSTRAINT `FK_REVIEW_MEMBER`
  FOREIGN KEY (`MEMBER_NO`) REFERENCES `MEMBER_MASTER` (`MEMBER_NO`);

ALTER TABLE `CONTENT_REVIEW` ADD CONSTRAINT `FK_REVIEW_CONTENT`
  FOREIGN KEY (`CONTENTID`) REFERENCES `CONTENT` (`CONTENTID`);

ALTER TABLE `REVIEW_REPORT` ADD CONSTRAINT `FK_REPORT_REVIEW`
  FOREIGN KEY (`CONTENT_REVIEW_NO`) REFERENCES `CONTENT_REVIEW` (`CONTENT_REVIEW_NO`);

ALTER TABLE `REVIEW_REPORT` ADD CONSTRAINT `FK_REPORT_REPORTER`
  FOREIGN KEY (`REPORTER_MEMBER_NO`) REFERENCES `MEMBER_MASTER` (`MEMBER_NO`);

ALTER TABLE `REVIEW_REPORT` ADD CONSTRAINT `FK_REPORT_TYPE`
  FOREIGN KEY (`REPORT_TYPE_CD`) REFERENCES `REVIEW_REPORT_TYPE` (`REPORT_TYPE_CD`);

ALTER TABLE `MEMBER_BOOKMARK` ADD CONSTRAINT `FK_BOOKMARK_MEMBER`
  FOREIGN KEY (`MEMBER_NO`) REFERENCES `MEMBER_MASTER` (`MEMBER_NO`);

ALTER TABLE `MEMBER_BOOKMARK` ADD CONSTRAINT `FK_BOOKMARK_CONTENT`
  FOREIGN KEY (`CONTENTID`) REFERENCES `CONTENT` (`CONTENTID`);

-- 게시판
ALTER TABLE `NOTICE` ADD CONSTRAINT `FK_NOTICE_ADMIN`
  FOREIGN KEY (`ADMIN_NO`) REFERENCES `ADMIN_ACCOUNT` (`ADMIN_NO`);

ALTER TABLE `FAQ` ADD CONSTRAINT `FK_FAQ_TYPE`
  FOREIGN KEY (`FAQ_TYPE_CD`) REFERENCES `FAQ_TYPE` (`FAQ_TYPE_CD`);

ALTER TABLE `FAQ` ADD CONSTRAINT `FK_FAQ_ADMIN`
  FOREIGN KEY (`ADMIN_NO`) REFERENCES `ADMIN_ACCOUNT` (`ADMIN_NO`);

ALTER TABLE `QNA_QUESTION` ADD CONSTRAINT `FK_QNA_MEMBER`
  FOREIGN KEY (`MEMBER_NO`) REFERENCES `MEMBER_MASTER` (`MEMBER_NO`);

ALTER TABLE `QNA_QUESTION` ADD CONSTRAINT `FK_QNA_TYPE`
  FOREIGN KEY (`QNA_TYPE_CD`) REFERENCES `QNA_TYPE` (`QNA_TYPE_CD`);

ALTER TABLE `QNA_ANSWER` ADD CONSTRAINT `FK_QNA_ANSWER_QUESTION`
  FOREIGN KEY (`QNA_REQ_NO`) REFERENCES `QNA_QUESTION` (`QNA_REQ_NO`);

ALTER TABLE `QNA_ANSWER` ADD CONSTRAINT `FK_QNA_ANSWER_ADMIN`
  FOREIGN KEY (`ADMIN_NO`) REFERENCES `ADMIN_ACCOUNT` (`ADMIN_NO`);

-- 여행 계획
ALTER TABLE `TRAVEL_PLAN` ADD CONSTRAINT `FK_PLAN_HOST`
  FOREIGN KEY (`HOST_MEMBER_NO`) REFERENCES `MEMBER_MASTER` (`MEMBER_NO`);

ALTER TABLE `TRAVEL_PLAN` ADD CONSTRAINT `FK_PLAN_THEME`
  FOREIGN KEY (`TRAVEL_THEME_CD`) REFERENCES `TRAVEL_THEME` (`TRAVEL_THEME_CD`);

ALTER TABLE `PLAN_GUEST` ADD CONSTRAINT `FK_GUEST_PLAN`
  FOREIGN KEY (`TRAVEL_PLAN_NO`) REFERENCES `TRAVEL_PLAN` (`TRAVEL_PLAN_NO`);

ALTER TABLE `PLAN_GUEST` ADD CONSTRAINT `FK_GUEST_MEMBER`
  FOREIGN KEY (`MEMBER_NO`) REFERENCES `MEMBER_MASTER` (`MEMBER_NO`);

ALTER TABLE `TRAVEL_ITINERARY` ADD CONSTRAINT `FK_ITINERARY_PLAN`
  FOREIGN KEY (`TRAVEL_PLAN_NO`) REFERENCES `TRAVEL_PLAN` (`TRAVEL_PLAN_NO`);

ALTER TABLE `TRAVEL_ITINERARY` ADD CONSTRAINT `FK_ITINERARY_CONTENT`
  FOREIGN KEY (`CONTENT_NO`) REFERENCES `CONTENT` (`CONTENTID`);

ALTER TABLE `ITINERARY_EXPENSE` ADD CONSTRAINT `FK_EXPENSE_ITINERARY`
  FOREIGN KEY (`TRAVEL_ITINERARY_NO`) REFERENCES `TRAVEL_ITINERARY` (`TRAVEL_ITINERARY_NO`);

ALTER TABLE `ITINERARY_EXPENSE` ADD CONSTRAINT `FK_EXPENSE_TYPE`
  FOREIGN KEY (`ITINERARY_EXPENSE_TYPE`) REFERENCES `ITINERARY_EXPENSE_TYPE` (`EXPENSE_TYPE_CD`);

ALTER TABLE `TRAVEL_ITINERARY_HIST` ADD CONSTRAINT `FK_HIST_ITINERARY`
  FOREIGN KEY (`TRAVEL_ITINERARY_NO`) REFERENCES `TRAVEL_ITINERARY` (`TRAVEL_ITINERARY_NO`);

ALTER TABLE `TRAVEL_ITINERARY_HIST` ADD CONSTRAINT `FK_HIST_ACTION`
  FOREIGN KEY (`ACTION_TYPE_CD`) REFERENCES `ACTION_TYPE` (`ACTION_TYPE_CD`);

ALTER TABLE `TRAVEL_ITINERARY_HIST` ADD CONSTRAINT `FK_HIST_GUEST`
  FOREIGN KEY (`PLAN_GUEST_NO`) REFERENCES `PLAN_GUEST` (`PLAN_GUEST_NO`);

ALTER TABLE `TRAVEL_INVITATION` ADD CONSTRAINT `FK_INVITATION_PLAN`
  FOREIGN KEY (`TRAVEL_PLAN_NO`) REFERENCES `TRAVEL_PLAN` (`TRAVEL_PLAN_NO`);

ALTER TABLE `PLAN_GUEST_LEAVE` ADD CONSTRAINT `FK_LEAVE_GUEST`
  FOREIGN KEY (`PLAN_GUEST_NO`) REFERENCES `PLAN_GUEST` (`PLAN_GUEST_NO`);

ALTER TABLE `PLAN_CHECKLIST` ADD CONSTRAINT `FK_CHECKLIST_PLAN`
  FOREIGN KEY (`TRAVEL_PLAN_NO`) REFERENCES `TRAVEL_PLAN` (`TRAVEL_PLAN_NO`);
